--- a/portfolio-api/src/main/resources/application.properties
+++ b/portfolio-api/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=investsight
+
+# Enable the H2 web console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Database configuration
+spring.datasource.url=jdbc:h2:mem:investsightdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# Tells Hibernate (JPA) to automatically create the tables based on your code
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
