--- a/portfolio-api/src/main/resources/application.properties
+++ b/portfolio-api/src/main/resources/application.properties
@@ -1,15 +1,15 @@
+# Nombre de tu aplicacion
 spring.application.name=investsight
 
-# Enable the H2 web console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# 1. Coordenadas de tu nueva base de datos MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/investsightdb?serverTimezone=UTC
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 
-# Database configuration
-spring.datasource.url=jdbc:h2:mem:investsightdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-
-# Tells Hibernate (JPA) to automatically create the tables based on your code
+# 2. Instrucciones para el Chef (Hibernate)
+# "update" le dice a Spring Boot que cree las tablas automaticamente si no existen
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# 3. Mostrar los comandos SQL en la consola (para ver que hace por debajo)
 spring.jpa.show-sql=true
