--- a/portfolio-api/src/main/resources/application.properties
+++ b/portfolio-api/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # 3. Mostrar los comandos SQL en la consola (para ver que hace por debajo)
 spring.jpa.show-sql=true
+# 4. Comando para la API
+market.api.key=${MARKET_API_KEY}
