feat: implement stateless JWT authentication and security filters

--- a/portfolio-api/src/main/resources/application.properties
+++ b/portfolio-api/src/main/resources/application.properties
@@ -19,3 +19,7 @@ market.api.key=${MARKET_API_KEY}
 
 # 5. Comando para expirar caché cada 10 min
 spring.cache.caffeine.spec=expireAfterWrite=10m
+
+# 6. Comandos para JWT 24h
+jwt.secret=${JWT_SECRET_KEY}
+jwt.expiration=86400000
