build: containerize application with Docker and Docker Compose

--- a/portfolio-api/src/main/resources/application.properties
+++ b/portfolio-api/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.jpa.show-sql=true
 # 4. Comando para la API
 market.api.key=${MARKET_API_KEY}
 
-# 5. Comando para expirar caché cada 10 min
+# 5. Comando para expirar cache cada 10 min
 spring.cache.caffeine.spec=expireAfterWrite=10m
 
 # 6. Comandos para JWT 24h
